# cuckoo

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  cuckoo.cabal
.github/workflows/: build.yaml
bench/: Internal.hs  SpellChecker.hs
lib/random/System/Random/: Internal.hs
src/Data/: Cuckoo.hs
src/Data/Cuckoo/: Internal.hs
src/Data/Cuckoo/Internal/: HashFunctions.hs
test/: Main.hs  doctest.hs
