cabal-version: 2.2
name: cuckoo
version: 0.1.0.0
synopsis: Pure Haskell Implementation of Cuckoo Filters
Description:
    Haskell implementation of Cuckoo filters as described in

    [B. Fan, D.G. Anderson, M. Kaminsky, M.D. Mitzenmacher. Cuckoo Filter:
    Practically Better Than Bloom. In Proc. CoNEXT,
    2014.](https://www.cs.cmu.edu/~dga/papers/cuckoo-conext2014.pdf)

    Cuckoo filters are a data structure for probabilistic set membership. They
    support insertion, deletion, and membership queries for set elements.

    Membership queries may return false positive results. But queries don't
    return false negative results.

    Unlike Bloom filters, Cuckoo filters maintain an upper bound on the false
    positive rate that is independent of the load of the filter. However,
    insertion of new elements in the filter can fail. For typical
    configurations, this probability is very small for load factors smaller than
    90 percent.

homepage: https://github.com/larskuhtz/cuckoo
bug-reports: https://github.com/larskuhtz/cuckoo/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (c) 2019, Lars Kuhtz <lakuhtz@gmail.com>
category: Data
tested-with:
      GHC==8.6.5
      GHC==8.4.4
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/larskuhtz/cuckoo.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
          Data.Cuckoo
          Data.Cuckoo.Internal
    build-depends:
          base >=4.10 && <4.15
        , memory >= 0.14
        , mwc-random >= 0.14
        , primitive >= 0.7
        , vector >= 0.12

test-suite tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -with-rtsopts=-N
    main-is: Main.hs
    build-depends:
        -- internal
          cuckoo

        -- external
        , base >=4.10 && <4.15
        , bytestring >= 0.10
        , cryptonite >= 0.26
        , hashable >= 1.3
        , memory >= 0.14
        , mwc-random >= 0.14
        , stopwatch >= 0.1

benchmark spellchecker
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -with-rtsopts=-N
    main-is: SpellChecker.hs
    build-depends:
        -- internal
          cuckoo

        -- external
        , base >=4.10 && <4.15
        , bytestring >= 0.10
        , memory >= 0.14
        , stopwatch >= 0.1

-- benchmark benchmarks
--     type: exitcode-stdio-1.0
--     hs-source-dirs: bench
--     default-language: Haskell2010
--     ghc-options:
--         -Wall
--         -rtsopts
--         -threaded
--         -with-rtsopts=-N
--         -O2
--     main-is: Main.hs
--     build-depends:
--         -- internal
--           cuckoo
--
--         -- external
--         , base >=4.10 && <4.15
--         , bytestring >= 0.10
--         , cryptonite >= 0.26
--         , memory >= 0.14
--         , mwc-random >= 0.14

